--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <h1>Atom For Things</h1>
-
+    <p><a href="http://atomforthings.readme.io">Updated Docs can be found here!</a></p>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
